# GNOMEConnect-desktop

./: .gitignore  .travis.yml  Cargo.toml  README.md  roadmap.md
src/: #main.ui#  config.rs  lib.rs  main.rs  main.ui  rsa.rs  tests.rs  transponder.rs  ui.rs
src/events/: mod.rs
src/server/: devicemanager.rs  event.rs  gcserver.rs  mod.rs  transponder.rs
src/server/packets/: mod.rs  request.rs  response.rs
