[package]
name = "gnomeconnect"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@gmail.com>"]

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
notify-rust = "^3"
hostname = " 0.1.3"
log = "0.3"
pretty_env_logger = "0.1.1"



[dependencies.gtk]
version = "0.2.0"
features = ["v3_10"]

[dependencies.gio]
version = "0.2.0"
features = ["v2_40"]


[[bin]]
name = "GNOMEConnect"
path = "src/main.rs"
