[package]
name = "gnomeconnect"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@gmail.com>"]

[dependencies]
base64 = "0.9.0"
env_logger = "0.4.3"
hostname = " 0.1.3"
log = "0.3"
notify-rust = "^3"
openssl = "0.9.23"
openssl-sys = "0.9.23"
pretty_env_logger = "0.1.1"
rust-crypto = "0.2.36"
serde = "1.0.24"
serde_derive = "1.0"
serde_json = "1.0.8"




[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk.git"
version = "0.3.0"
features = ["v3_10"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gio.git"
version = "0.3.0"
features = ["v2_40"]




[[bin]]
name = "GNOMEConnect"
path = "src/main.rs"
