[package]
name = "gnomeconnect"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@gmail.com>"]


[dependencies]
base64 = "0.9.0"
clap = "2.29.2"
env_logger = "0.4.3"
hostname = " 0.1.3"
log = "0.3"
notify-rust = "^3"
openssl = "0.10.2"
pretty_env_logger = "0.1.1"
rand = "0.4.2"
rust-crypto = "0.2.36"
serde = "1.0.24"
serde_derive = "1.0"
serde_json = "1.0.8"


[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk.git"
version = "0.3.0"
features = ["v3_10"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gio.git"
version = "0.3.0"
features = ["v2_40"]
